--- a/INSTALL
+++ b/INSTALL
@@ -1,12 +1,29 @@
+# -*- mode: shell-script -*-
+#!/bin/bash
+
+function usage () {
+    echo "$1"
+    exit
+}
+
+# find our platform
+case "$(uname -s)" in
+    ("Linux")  SYS=linux64;;
+    ("Darwin") SYS=macos;;
+    (*) usage "I only work on Linux and Darwin"
+esac
+# find the current purescript tarball and download it
 PSC=https://github.com/purescript/purescript/releases
-SYS=macos # macos | linus64
-wget -qO - $PSC | grep -Eo "/download/.*/$SYS.tar.gz"
-wget $PSC/download/v0.6.1.2/linux64.tar.gz
+TRG=$(wget -qO - $PSC | grep -Eo "/download/.*/$SYS.tar.gz"| head -1)
+echo "your system is $SYS. getting purecript vsn $(echo $TRG | cut -f3 -d"/")."
+wget $PSC/$TRG
 # get tarball from https://github.com/purescript/purescript/releases
 # and unpack
-tar -xzf linux64.tar.gz
+tar -xzf $SYS.tar.gz
+rm $SYS.tar.gz
 # move the psc* binaries to somewhere in the path
 sudo mv purescript/psc* /usr/local/bin
+rm -rf ./purescript
 # install some dependencies globally
 sudo npm install -g grunt-cli bower jshint
 # install the project local stuff from package.json and bower.json
